addjusting header and testimonial

--- a/index.html
+++ b/index.html
@@ -26,21 +26,23 @@
                 <img src="img/logo.png" alt="logo-yvonne-miller-langauge-services">
             </figure>
             <div class="header-divider"> </div>
-            <div class="langauge-selector">
-                <ul>
-                    <li> <a href=#german> <figure class="lang-sel-flag"> <img src="img/german-flag.png" alt="german-flag">  </figure> </a> </li>
-                    <li> <a href=#portuguese> <figure class="lang-sel-flag"> <img src="img/portuguese-flag.png" alt="portuguese-flag"> </figure> </a> </li>
-                    <li> <a href=#spanish> <figure class="lang-sel-flag"> <img src="img/spanish-flag.png" alt="spanish-flag"> </figure> </a> </li>
-                </ul>
-            </div>
-            <nav>
-                <ul>
-                    <li> <a href=#about> Über mich </a> </li>
-                    <li> <a href=#services> Angebote </a> </li>
-                    <li> <a href=#prices> Preise </a> </li>
-                     <li> <a href=#contact> Kontakt </a> </li>
-                </ul>
-            </nav>
+            <div class="nav-bars">
+                <div class="langauge-selector">
+                    <ul>
+                        <li> <a href=#german> <figure class="lang-sel-flag"> <img src="img/german-flag.png" alt="german-flag">  </figure> </a> </li>
+                        <li> <a href=#portuguese> <figure class="lang-sel-flag"> <img src="img/portuguese-flag.png" alt="portuguese-flag"> </figure> </a> </li>
+                        <li> <a href=#spanish> <figure class="lang-sel-flag"> <img src="img/spanish-flag.png" alt="spanish-flag"> </figure> </a> </li>
+                    </ul>
+                </div>
+                <nav>
+                    <ul>
+                        <li> <a href=#about> Über mich </a> </li>
+                        <li> <a href=#services> Angebote </a> </li>
+                        <li> <a href=#prices> Preise </a> </li>
+                         <li> <a href=#contact> Kontakt </a> </li>
+                    </ul>
+                </nav>
+            </div> <!-- end nav-bars -->
         </div> <!-- end content wrapper -->
     </header>
 
