adjust thrid level button width on testimonial

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                               </div> <!-- end soft facts item -->
 
                               <div class="soft-facts-item">
-                                  <button class="btn btn-third-level" onclick="location.href='#more-about-me';"> mehr über mich </button>
+                                  <button class="btn btn-third-level" id="testimonal-button" onclick="location.href='#more-about-me';"> mehr über mich </button>
                               </div> <!-- end soft facts item -->
 
                           </div> <!-- end soft facts -->
