fixing nav bar links

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li> <a href=#about> Über mich </a> </li>
-                        <li> <a href=#services> Angebote </a> </li>
-                        <li> <a href=#prices> Preise </a> </li>
-                         <li> <a href=#contact> Kontakt </a> </li>
+                        <li> <a href=#about-me> Über mich </a> </li>
+                        <li> <a href=#services-section> Angebote </a> </li>
+                        <li> <a href=#prices-page> Preise </a> </li>
+                        <li> <a href=#questions-sec> Kontakt </a> </li>
                     </ul>
                 </nav>
             </div> <!-- end nav-bars -->
@@ -88,7 +88,7 @@
 
 
           <!-- ANGEBOT section -->
-          <section class="services-section">
+          <section class="services-section" id="services-section">
               <div class="content-wrapper">
                   <h2> Angebot </h2>
                   <p> Asagittis faucibus lacus eget blandit. Mauris vitae ultricies </p>
@@ -165,7 +165,7 @@
           </section>
 
           <!-- About me Section-->
-          <section class="about-me">
+          <section class="about-me" id="about-me">
               <div class="content-wrapper">
                   <h2> Über mich </h2>
                     <div class="list-wrapper">
@@ -248,7 +248,7 @@
           </section>
 
           <!-- Questions section -->
-          <section class="questions-sec">
+          <section class="questions-sec" id="questions-sec">
               <div class="content-wrapper">
                   <h2> <span class="highlight-text"> Noch Fragen? </span> Möchten Sie mehr wissen? </h2>
                   <button class="btn btn-third-level" onclick="location.href='#more-about-me';"> mehr über mich </button>
