fixing text wrapper duplicate

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                               <img src="img/translations-icon.png" alt="translations-icon">
                           </figure>
                           <p> <span class="highlight-text-bold"> Übersetzungen: </span> </p>
-                          <div class="text-wrapper">
+                          <div class="text-wrapper-services">
                               <p class="add-spacer"> Portugiesisch, </p>
                               <p class="add-spacer"> Spanisch, </p>
                               <p> Deutsch </p>
@@ -132,7 +132,7 @@
                               <img src="img/teaching-icon.png" alt="teaching-icon">
                           </figure>
                           <p> <span class="highlight-text-bold"> Sprachunterricht </span></p>
-                          <div class="text-wrapper">
+                          <div class="text-wrapper-services">
                                 <p class="add-spacer"> Deutsch, </p>
                                 <p class="add-spacer"> Portugiesisch, </p>
                                 <p> Spanisch </p>
