add home link to header page logo

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
     <header>
         <div class="content-wrapper">
             <figure id="logo">
-                <img src="img/logo.png" alt="logo-yvonne-miller-langauge-services">
-            </figure>
+                <a href=#>
+                    <img src="img/logo.png" alt="logo-yvonne-miller-langauge-services">
+                </a>
+          </figure>
             <div class="header-divider"> </div>
             <div class="nav-bars">
                 <div class="langauge-selector">
