--- a/portuguese/index.html
+++ b/portuguese/index.html
@@ -1,6 +1,6 @@
 <!doctype HTML>
 
-<html lang="en">
+<html lang="por">
 
     <head>
         <meta charset="utf-8">
@@ -11,10 +11,10 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
 
-        <title>Yvonne Miller | Sprach-Services </title>
+        <title>Yvonne Miller | serviços linguísticos </title>
         <!-- CSS styles -->
-        <link rel="stylesheet" href="css/main.css"/>
-        <link rel="stylesheet" href="css/normalize.css"/>
+        <link rel="stylesheet" href="../css/main.css"/>
+        <link rel="stylesheet" href="../css/normalize.css"/>
         <!-- Google fonts -->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Open+Sans:400,600,700,800|Roboto+Slab:400,700|Source+Sans+Pro:300,400,700,900|Source+Serif+Pro:400,600,700|Titillium+Web:300,400,600,700,900" rel="stylesheet">
     </head>
@@ -24,24 +24,24 @@
         <div class="content-wrapper">
             <figure id="logo">
                 <a href=#>
-                    <img src="img/logo.png" alt="logo-yvonne-miller-langauge-services">
+                    <img src="../img/logo.png" alt="logo-yvonne-miller-langauge-services">
                 </a>
           </figure>
             <div class="header-divider"> </div>
             <div class="nav-bars">
                 <div class="langauge-selector">
                     <ul>
-                        <li> <a href=#> <figure class="lang-sel-flag"> <img src="img/german-flag.png" alt="german-flag">  </figure> </a> </li>
-                        <li> <a href="portuguese/index.html"> <figure class="lang-sel-flag"> <img src="img/portuguese-flag.png" alt="portuguese-flag"> </figure> </a> </li>
-                        <li> <a href=#spanish> <figure class="lang-sel-flag"> <img src="img/spanish-flag.png" alt="spanish-flag"> </figure> </a> </li>
+                        <li> <a href=#> <figure class="lang-sel-flag"> <img src="../img/german-flag.png" alt="german-flag">  </figure> </a> </li>
+                        <li> <a href=#portuguese> <figure class="lang-sel-flag"> <img src="../img/portuguese-flag.png" alt="portuguese-flag"> </figure> </a> </li>
+                        <li> <a href=#spanish> <figure class="lang-sel-flag"> <img src="../img/spanish-flag.png" alt="spanish-flag"> </figure> </a> </li>
                     </ul>
                 </div>
                 <nav>
                     <ul>
-                        <li> <a href=#about-me> Über mich </a> </li>
-                        <li> <a href=#services-section> Angebote </a> </li>
-                        <li> <a href=#prices-page> Preise </a> </li>
-                        <li> <a href=#questions-sec> Kontakt </a> </li>
+                        <li> <a href=#about-me> Sobre mim </a> </li>
+                        <li> <a href=#services-section> Serviços </a> </li>
+                        <li> <a href=#prices-page> Preços </a> </li>
+                        <li> <a href=#questions-sec> Contato </a> </li>
                     </ul>
                 </nav>
             </div> <!-- end nav-bars -->
@@ -54,33 +54,33 @@
           <section class="hero-image">
              <div class="content-wrapper">
                   <div class="text-wrapper-hero">
-                      <h1> Redaktion </h1>
+                      <h1> Redação </h1>
                       <hr>
-                      <h1> Korrektorat </h1>
+                      <h1> Revisão </h1>
                       <hr>
-                      <h1> Autorin </h1>
+                      <h1> Autor </h1>
                       <hr>
-                      <h1> Übersetzungen </h1>
+                      <h1> Tradução </h1>
                       <hr>
-                      <h1> Unterricht </h1>
+                      <h1> Aulas </h1>
                   </div>
                   <figure>
-                        <img src="img/landingpage-logo.png" alt="page-logo">
+                        <img src="../img/landingpage-logo.png" alt="page-logo">
                   </figure>
              </div> <!-- end content wrapper  -->
              <div class="user-engagement">
-                  <button class="btn btn-first-level" onclick="location.href='#services';"> angebot </button>
-                  <button class="btn btn-sec-level" onclick="location.href='#contact';"> kontakt </button>
+                  <button class="btn btn-first-level" onclick="location.href='#services';"> serviços </button>
+                  <button class="btn btn-sec-level" onclick="location.href='#contact';"> contato </button>
              </div>
           </section>
 
           <section class="welcoming">
               <div class="content-wrapper">
                   <p>
-                      <span class="highlight-text">Hallo, ich bin Yvonne </span> providing you with different writer services such as portuguese, spanish to German translations, …  Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae. Donec sagittis faucibus lacus eget blandit. Mauris vitae ultricies metus.
+                      <span class="highlight-text">Olá, meu nome é Yvonne </span> providing you with different writer services such as portuguese, spanish to German translations, …  Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae. Donec sagittis faucibus lacus eget blandit. Mauris vitae ultricies metus.
                   </p>
                   <figure>
-                      <img src="img/portrait.png" alt="head-shoot">
+                      <img src="../img/portrait.png" alt="head-shoot">
                   </figure>
               </div>
               <div class="shape-wrapper">
@@ -92,52 +92,52 @@
           <!-- ANGEBOT section -->
           <section class="services-section" id="services-section">
               <div class="content-wrapper">
-                  <h2> Angebot </h2>
+                  <h2> Serviços </h2>
                   <p> Asagittis faucibus lacus eget blandit. Mauris vitae ultricies </p>
                   <div class="services-detail-wrapper">
                       <div class="services-item">
                           <figure>
-                              <img src="img/redaktion-icon.png" alt="redaktion-icon">
+                              <img src="../img/redaktion-icon.png" alt="redaktion-icon">
                           </figure>
-                          <p> <span class="highlight-text-bold"> Redaktion </p>
+                          <p> <span class="highlight-text-bold"> Redação </p>
                       </div> <!-- end services-item wrapper -->
 
                       <div class="services-item">
                           <figure>
-                              <img src="img/author-icon.png" alt="author-icon">
+                              <img src="../img/author-icon.png" alt="author-icon">
                           </figure>
-                          <p> <span class="highlight-text-bold"> Korrektorat </span> </p>
+                          <p> <span class="highlight-text-bold"> Revisão </span> </p>
                       </div> <!-- end services-item wrapper -->
 
                       <div class="services-item">
                           <figure>
-                              <img src="img/ghostwriter-icon.png" alt="ghostwriter-icon">
+                              <img src="../img/ghostwriter-icon.png" alt="ghostwriter-icon">
                           </figure>
-                          <p> <span class="highlight-text-bold"> Autorin </span> </p>
-                          <p> <span class="highlight-text-bold"> Ghostwriterin </span> </p>
+                          <p> <span class="highlight-text-bold"> Autor </span> </p>
+                          <p> <span class="highlight-text-bold"> Ghostwriter </span> </p>
                       </div> <!-- end services-item wrapper -->
 
                       <div class="services-item">
                           <figure>
-                              <img src="img/translations-icon.png" alt="translations-icon">
+                              <img src="../img/translations-icon.png" alt="translations-icon">
                           </figure>
-                          <p> <span class="highlight-text-bold"> Übersetzungen: </span> </p>
+                          <p> <span class="highlight-text-bold"> Tradução: </span> </p>
                           <div class="text-wrapper-services">
-                              <p class="add-spacer"> Portugiesisch, </p>
-                              <p class="add-spacer"> Spanisch, </p>
-                              <p> Deutsch </p>
+                              <p class="add-spacer"> Português, </p>
+                              <p class="add-spacer"> Espanhol, </p>
+                              <p> Alemão </p>
                           </div> <!-- end text wrapper -->
                       </div> <!-- end services-item wrapper -->
 
                       <div class="services-item">
                           <figure>
-                              <img src="img/teaching-icon.png" alt="teaching-icon">
+                              <img src="../img/teaching-icon.png" alt="teaching-icon">
                           </figure>
-                          <p> <span class="highlight-text-bold"> Sprachunterricht </span></p>
+                          <p> <span class="highlight-text-bold"> Aulas de línguas </span></p>
                           <div class="text-wrapper-services">
-                                <p class="add-spacer"> Deutsch, </p>
-                                <p class="add-spacer"> Portugiesisch, </p>
-                                <p> Spanisch </p>
+                                <p class="add-spacer"> Alemão, </p>
+                                <p class="add-spacer"> Português, </p>
+                                <p> Espanhol </p>
                           </div> <!-- end text wrapper -->
                       </div> <!-- end services-item wrapper -->
 
@@ -150,7 +150,7 @@
               <div class="content-wrapper" >
                   <div class="testemonie-pic">
                       <figure>
-                          <img src="img/testimon-general.png" alt="">
+                          <img src="../img/testimon-general.png" alt="">
                       </figure>
                   </div>
                   <div class="slider-wrapper">
@@ -169,43 +169,43 @@
           <!-- About me Section-->
           <section class="about-me" id="about-me">
               <div class="content-wrapper">
-                  <h2> Über mich </h2>
+                  <h2> Sobre mim </h2>
                     <div class="list-wrapper">
                           <div class="hard-facts">
                               <div class="hard-facts-item">
                                   <figure>
-                                      <img src="img/education-logo.png" alt="education-facts-icon">
+                                      <img src="../img/education-logo.png" alt="education-facts-icon">
                                   </figure>
                                   <div class="text-wrapper">
-                                      <p> Master Fremdsprachenlinguistik: </p>
-                                      <p> Deutsch als Fremdsprache, Spanisch </p>
+                                      <p> Mestrado em Linguística de língua estrangeira: </p>
+                                      <p> Alemão como língua estrangeira, espanhol </p>
                                   </div> <!-- end text wrapper -->
                               </div> <!-- end hard facts item -->
 
                           <div class="hard-facts-item">
                               <figure>
-                                  <img src="img/editor-icon.png" alt="editor-facts-icon">
+                                  <img src="../img/editor-icon.png" alt="editor-facts-icon">
                               </figure>
                               <div class="text-wrapper">
-                                  <p> ausgebildete Redakteurin </p>
+                                  <p> editora formada </p>
                               </div> <!-- end text wrapper -->
                           </div> <!-- end hard facts item -->
 
                           <div class="hard-facts-item">
                               <figure>
-                                  <img src="img/experience-icon.png" alt="experience-facts-icon">
+                                  <img src="../img/experience-icon.png" alt="experience-facts-icon">
                               </figure>
                               <div class="text-wrapper">
-                                  <p> Berufserfahrung <span id="experience-years">7</span> Jahre  </p>
+                                  <p> experiência profissional <span id="experience-years">7</span> anos  </p>
                               </div> <!-- end text wrapper -->
                           </div> <!-- end hard facts item -->
 
                           <div class="hard-facts-item">
                               <figure>
-                                  <img src="img/projects-icon.png" alt="projects-finished-icon">
+                                  <img src="../img/projects-icon.png" alt="projects-finished-icon">
                               </figure>
                               <div class="text-wrapper">
-                                  <p> <span id="number-of-projects">26</span> abgeschlossene Projekte  </p>
+                                  <p> <span id="number-of-projects">26</span> projetos completos  </p>
                               </div> <!-- end text wrapper -->
                           </div> <!-- end hard facts item -->
 
@@ -214,7 +214,7 @@
                           <div class="soft-facts">
                               <div class="soft-facts-item">
                                   <figure>
-                                      <img src="img/passion-icon.png" alt="projects-finished-icon">
+                                      <img src="../img/passion-icon.png" alt="projects-finished-icon">
                                   </figure>
                                   <div class="text-wrapper">
                                       <p> <span id="number-of-projects"> Leidenschaftlich bei dem was ich mache  </p>
@@ -223,24 +223,24 @@
 
                               <div class="soft-facts-item">
                                   <figure>
-                                      <img src="img/quality-icon.png" alt="projects-finished-icon">
+                                      <img src="../img/quality-icon.png" alt="projects-finished-icon">
                                   </figure>
                                   <div class="text-wrapper">
-                                      <p> <span id="number-of-projects"> qualitätsorientiert  </p>
+                                      <p> <span id="number-of-projects"> qualitätsorientiert </p>
                                   </div> <!-- end text wrapper -->
                               </div> <!-- end soft facts item -->
 
                               <div class="soft-facts-item">
                                   <figure>
-                                      <img src="img/time-money-icon.png" alt="projects-finished-icon">
+                                      <img src="../img/time-money-icon.png" alt="projects-finished-icon">
                                   </figure>
                                   <div class="text-wrapper">
-                                      <p> <span id="number-of-projects"> Ich respektiere Ihr Budget und Ihren Zeitrahmen  </p>
+                                      <p> <span id="number-of-projects"> eu respeito o seu orçamento e prazo </p>
                                   </div> <!-- end text wrapper -->
                               </div> <!-- end soft facts item -->
 
                               <div class="soft-facts-item">
-                                  <button class="btn btn-third-level" id="testimonal-button" onclick="location.href='#more-about-me';"> mehr über mich </button>
+                                  <button class="btn btn-third-level" id="testimonal-button" onclick="location.href='#more-about-me';"> mais sobre mim </button>
                               </div> <!-- end soft facts item -->
 
                           </div> <!-- end soft facts -->
@@ -252,8 +252,8 @@
           <!-- Questions section -->
           <section class="questions-sec" id="questions-sec">
               <div class="content-wrapper">
-                  <h2> <span class="highlight-text"> Noch Fragen? </span> Möchten Sie mehr wissen? </h2>
-                  <button class="btn btn-third-level" onclick="location.href='#more-about-me';"> mehr über mich </button>
+                  <h2> <span class="highlight-text"> Mais perguntas? </span> Você gostaria de saber mais? </h2>
+                  <button class="btn btn-third-level" onclick="location.href='#more-about-me';"> mais sobre mim </button>
                   <button class="btn btn-sec-level" id="send-direct-email"> <a href="mailto:contact@theresamannschatz.design"> kontakt </a> </button>
               </div>
           </section>
@@ -267,7 +267,7 @@
                   <div class="footer-container">
                       <p> Copyright @ Theresa Mannschatz 2019 </p>
                       <figure>
-                        <img id="chamaeleon-footer-brand" src="img/chamaeleon.png" alt="chamaleon-symbol-footer">
+                        <img id="chamaeleon-footer-brand" src="../img/chamaeleon.png" alt="chamaleon-symbol-footer">
                       </figure>
                   </div> <!-- end footer container -->
           </footer>
