setting up prices and more about me page for german

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype HTML>
 
-<html lang="en">
+<html lang="de">
 
     <head>
         <meta charset="utf-8">
@@ -33,14 +33,14 @@
                     <ul>
                         <li> <a href=#> <figure class="lang-sel-flag"> <img src="img/german-flag.png" alt="german-flag">  </figure> </a> </li>
                         <li> <a href="portuguese/index.html"> <figure class="lang-sel-flag"> <img src="img/portuguese-flag.png" alt="portuguese-flag"> </figure> </a> </li>
-                        <li> <a href=#spanish> <figure class="lang-sel-flag"> <img src="img/spanish-flag.png" alt="spanish-flag"> </figure> </a> </li>
+                        <li> <a href="spanish/index.html"> <figure class="lang-sel-flag"> <img src="img/spanish-flag.png" alt="spanish-flag"> </figure> </a> </li>
                     </ul>
                 </div>
                 <nav>
                     <ul>
                         <li> <a href=#about-me> Über mich </a> </li>
                         <li> <a href=#services-section> Angebote </a> </li>
-                        <li> <a href=#prices-page> Preise </a> </li>
+                        <li> <a href="prices/index.html"> Preise </a> </li>
                         <li> <a href=#questions-sec> Kontakt </a> </li>
                     </ul>
                 </nav>
@@ -240,7 +240,7 @@
                               </div> <!-- end soft facts item -->
 
                               <div class="soft-facts-item">
-                                  <button class="btn btn-third-level" id="testimonal-button" onclick="location.href='#more-about-me';"> mehr über mich </button>
+                                  <button class="btn btn-third-level" id="testimonal-button" onclick="location.href='more-about-me/index.html';"> mehr über mich </button>
                               </div> <!-- end soft facts item -->
 
                           </div> <!-- end soft facts -->
@@ -253,7 +253,7 @@
           <section class="questions-sec" id="questions-sec">
               <div class="content-wrapper">
                   <h2> <span class="highlight-text"> Noch Fragen? </span> Möchten Sie mehr wissen? </h2>
-                  <button class="btn btn-third-level" onclick="location.href='#more-about-me';"> mehr über mich </button>
+                  <button class="btn btn-third-level" onclick="location.href='more-about-me/index.html';"> mehr über mich </button>
                   <button class="btn btn-sec-level" id="send-direct-email"> <a href="mailto:contact@theresamannschatz.design"> kontakt </a> </button>
               </div>
           </section>
