--- a/spanish/index.html
+++ b/spanish/index.html
@@ -1,6 +1,6 @@
 <!doctype HTML>
 
-<html lang="por">
+<html lang="es">
 
     <head>
         <meta charset="utf-8">
@@ -11,7 +11,7 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
 
-        <title>Yvonne Miller | serviços linguísticos </title>
+        <title>Yvonne Miller | servicios lingüísticos </title>
         <!-- CSS styles -->
         <link rel="stylesheet" href="../css/main.css"/>
         <link rel="stylesheet" href="../css/normalize.css"/>
@@ -23,7 +23,7 @@
     <header>
         <div class="content-wrapper">
             <figure id="logo">
-                <a href="../portuguese/index.html">
+                <a href="../spanish/index.html">
                     <img src="../img/logo.png" alt="logo-yvonne-miller-langauge-services">
                 </a>
           </figure>
@@ -38,10 +38,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li> <a href=#about-me> Sobre mim </a> </li>
-                        <li> <a href=#services-section> Serviços </a> </li>
-                        <li> <a href=#prices-page> Preços </a> </li>
-                        <li> <a href=#questions-sec> Contato </a> </li>
+                        <li> <a href=#about-me> Sobre mi </a> </li>
+                        <li> <a href=#services-section> Servicio </a> </li>
+                        <li> <a href=#prices-page> Precios </a> </li>
+                        <li> <a href=#questions-sec> Contacto </a> </li>
                     </ul>
                 </nav>
             </div> <!-- end nav-bars -->
@@ -54,15 +54,15 @@
           <section class="hero-image">
              <div class="content-wrapper">
                   <div class="text-wrapper-hero">
-                      <h1> Redação </h1>
+                      <h1> Redacción </h1>
                       <hr>
-                      <h1> Revisão </h1>
+                      <h1> Corrección </h1>
                       <hr>
                       <h1> Autor </h1>
                       <hr>
-                      <h1> Tradução </h1>
+                      <h1> Traducción </h1>
                       <hr>
-                      <h1> Aulas </h1>
+                      <h1> Enseñanza </h1>
                   </div>
                   <figure>
                         <img src="../img/landingpage-logo.png" alt="page-logo">
