fixing nav links on mehr über mich page

--- a/more-about-me/index.html
+++ b/more-about-me/index.html
@@ -55,10 +55,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li> <a href="/index.html#about-me"> Über mich </a> </li>
-                        <li> <a href="/index.html#services-section"> Angebote </a> </li>
-                        <li> <a href="/prices/index.html"> Preise </a> </li>
-                        <li> <a href="/index.html#questions-sec"> Kontakt </a> </li>
+                        <li> <a href="../index.html#about-me"> Über mich </a> </li>
+                        <li> <a href="../index.html#services-section"> Angebote </a> </li>
+                        <li> <a href="../prices/index.html"> Preise </a> </li>
+                        <li> <a href="../index.html#questions-sec"> Kontakt </a> </li>
                     </ul>
                 </nav>
             </div> <!-- end nav-bars -->
