fixing nav bar logo link to main page

--- a/more-about-me/index.html
+++ b/more-about-me/index.html
@@ -40,7 +40,7 @@
     <header>
         <div class="content-wrapper">
             <figure id="logo">
-                <a href="../html.index">
+                <a href="../index.html">
                     <img src="../img/logo.png" alt="logo-yvonne-miller-langauge-services">
                 </a>
           </figure>
