--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
                       <figure>
                         <img id="chamaeleon-footer-brand" src="img/chamaeleon.png" alt="chamaleon-symbol-footer">
                       </figure>
+                      <p> <a href=""> Impressum </a> </p>
                   </div> <!-- end footer container -->
           </footer>
     </main>
