--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <nav>
                     <ul>
                         <li> <a href=#about-me> Über mich </a> </li>
-                        <li> <a href=#services-section> Angebote </a> </li>
+                        <li> <a href=#services-section> Angebot </a> </li>
                         <li> <a href="prices/index.html"> Preise </a> </li>
                         <li> <a href=#questions-sec> Kontakt </a> </li>
                     </ul>
