--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                       <span class="highlight-text">Hallo, ich bin Yvonne </span> providing you with different writer services such as portuguese, spanish to German translations, …  Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae. Donec sagittis faucibus lacus eget blandit. Mauris vitae ultricies metus.
                   </p>
                   <figure>
-                      <img src="img/portrait.png" alt="head-shoot">
+                      <img src="img/portrait-ym-square.jpg" alt="portrait">
                   </figure>
               </div>
               <div class="shape-wrapper">
