going back to default design for text highlighting e.g. in welcoming text

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                   <img src="img/experience-icon.png" alt="experience-facts-icon">
                               </figure>
                               <div class="text-wrapper">
-                                  <p> Berufserfahrung <span id="experience-years">7</span> Jahre  </p>
+                                  <p> <span id="experience-years"> 7 </span> Jahre Berufserfahrung </p>
                               </div> <!-- end text wrapper -->
                           </div> <!-- end hard facts item -->
 
