added impressum page for german

--- a/index.html
+++ b/index.html
@@ -279,13 +279,13 @@
                   <div class="content-wrapper">
                       <a href="mailto:contact@ym.com"> contact@ym.com </a>
                   </div>
-
+                  <p id="impressum"> <a href="impressum/index.html"> Impressum </a> </p>
                   <div class="footer-container">
                       <p> Copyright @ Theresa Mannschatz 2019 </p>
                       <figure>
                         <img id="chamaeleon-footer-brand" src="img/chamaeleon.png" alt="chamaleon-symbol-footer">
                       </figure>
-                      <p> <a href=""> Impressum </a> </p>
+
                   </div> <!-- end footer container -->
           </footer>
     </main>
