added portuguese impressum

--- a/spanish/impressum/index.html
+++ b/spanish/impressum/index.html
@@ -28,7 +28,7 @@
         <meta name="msapplication-TileImage" content="../ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
         <!-- Page title -->
-        <title> Yvonne Miller | Impressum </title>
+        <title> Yvonne Miller | Impressum Spanish </title>
         <!-- CSS styles -->
         <link rel="stylesheet" href="../css/main.css"/>
         <link rel="stylesheet" href="../css/normalize.css"/>
@@ -68,8 +68,15 @@
 
 
     <main>
-          <section class="impressum">
+          <section class="impressum-section">
             <address>
+                <h2> Impressum Spanish </h2>
+                <p> Yvonne Miller </p>
+                <p> Mustermann Str., XXXXXX Fortaleza, Brasilien </p>
+                <p> email: ym-services@gmail.com </p>
+                <p> Número de telefone: </p>
+                <p> Rechtsform: </p>
+                <p> Ust-ID: </p>
             </address>
           </section>
 
@@ -89,14 +96,14 @@
           </footer>
     </main>
 
-    <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
     <!-- other jQuery -->
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/plugins.js"></script>
+    <script src="../js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
