add introduction text

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <section class="welcoming">
               <div class="content-wrapper">
                   <p>
-                      <span class="highlight-text">Hallo, ich bin Yvonne </span> providing you with different writer services such as portuguese, spanish to German translations, …  Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae. Donec sagittis faucibus lacus eget blandit. Mauris vitae ultricies metus.
+                      <span class="highlight-text">Hallo, ich bin Yvonne Miller</span>, ausgebildete Schulbuchredakteurin, Linguistin und Lehrerin für Deutsch als Fremdsprache und Spanisch. Als Autorin schreibe ich außerdem mehrsprachige Kinderbücher, Prosa sowie Texte und Aufgaben für den Sprachunterricht. Seit 2016 bin ich digitale Nomadin mit aktuellem Wohnsitz in Brasilien. Wie kann ich Sie bei Ihrem Projekt unterstützen? Schreiben Sie mir einfach eine E-Mail.
                   </p>
                   <figure>
                       <img src="img/portrait-ym-square.jpg" alt="portrait">
