adding contact button to introduction section

--- a/index.html
+++ b/index.html
@@ -93,12 +93,16 @@
 
           <section class="welcoming">
               <div class="content-wrapper">
-                  <p>
-                      <span class="highlight-text">Hallo, ich bin Yvonne Miller</span>, ausgebildete Schulbuchredakteurin, Linguistin und Lehrerin für Deutsch als Fremdsprache und Spanisch. Als Autorin schreibe ich außerdem mehrsprachige Kinderbücher, Prosa sowie Texte und Aufgaben für den Sprachunterricht. Seit 2016 bin ich digitale Nomadin mit aktuellem Wohnsitz in Brasilien. Wie kann ich Sie bei Ihrem Projekt unterstützen? Schreiben Sie mir einfach eine E-Mail.
-                  </p>
+                  <div class="text-btn-wrapper">
+                    <p>
+                        <span class="highlight-text">Hallo, ich bin Yvonne Miller</span>, ausgebildete Schulbuchredakteurin, Linguistin und Lehrerin für Deutsch als Fremdsprache und Spanisch. Als Autorin schreibe ich außerdem mehrsprachige Kinderbücher, Prosa sowie Texte und Aufgaben für den Sprachunterricht. Seit 2016 bin ich digitale Nomadin mit aktuellem Wohnsitz in Brasilien. Wie kann ich Sie bei Ihrem Projekt unterstützen? Schreiben Sie mir einfach eine E-Mail.
+                    </p>
+                    <button class="btn btn-sec-level" id="send-direct-email-introduction"> <a href="mailto:contact@ym_services.de"> kontakt </a> </button>
+                  </div>
                   <figure>
                       <img src="img/portrait-ym-square.jpg" alt="portrait">
                   </figure>
+
               </div>
               <div class="shape-wrapper">
                   <div id="polygon-shape-circle"> </div>
@@ -270,7 +274,7 @@
               <div class="content-wrapper">
                   <h2> <span class="highlight-text"> Noch Fragen? </span> Möchten Sie mehr wissen? </h2>
                   <button class="btn btn-third-level" onclick="location.href='more-about-me/index.html';"> mehr über mich </button>
-                  <button class="btn btn-sec-level" id="send-direct-email"> <a href="mailto:contact@theresamannschatz.design"> kontakt </a> </button>
+                  <button class="btn btn-sec-level" id="send-direct-email"> <a href="mailto:contact@ym_services.de"> kontakt </a> </button>
               </div>
           </section>
 
