added first box to more about me page

--- a/more-about-me/index.html
+++ b/more-about-me/index.html
@@ -65,12 +65,27 @@
         </div> <!-- end content wrapper -->
     </header>
 
+ <main>
+    <section class="about-me-website">
+      <h1> Mehr über mich </h1>
+      <div class="div-shape">
+          <a href="" >
+              <div class="abme-item-wrapper">
+                <figure>
+                    <img src="../img/road-solid-CV-link.png" alt="link-to-CV">
+                </figure>
+                <p> Beruflicher und akademischer Werdegang </p>
+              </div>
+          </a>
+      </div>
+      <div> </div>
+      <div> </div>
+    </section>
 
 
 
-
-          <!--- FOOTER -->
-          <footer class="copyright">
+    <!--- FOOTER -->
+    <footer class="copyright">
                   <div class="content-wrapper">
                       <a href="mailto:contact@ym.com"> contact@ym.com </a>
                   </div>
