add all navigation divs

--- a/more-about-me/index.html
+++ b/more-about-me/index.html
@@ -78,6 +78,26 @@
               </div>
           </a>
       </div>
+      <div class="div-shape">
+          <a href="" >
+              <div class="abme-item-wrapper">
+                <figure>
+                    <img src="../img/pubs-solid-link.png" alt="link-to-publicationsCV">
+                </figure>
+                <p> Publikationen und Projekte </p>
+              </div>
+          </a>
+      </div>
+      <div class="div-shape">
+          <a href="" >
+              <div class="abme-item-wrapper">
+                <figure>
+                    <img src="../img/workshops-solid-link.png" alt="link-to-workshops">
+                </figure>
+                <p> Kurse und Workshops </p>
+              </div>
+          </a>
+      </div>
       <div> </div>
       <div> </div>
     </section>
@@ -89,6 +109,7 @@
                   <div class="content-wrapper">
                       <a href="mailto:contact@ym.com"> contact@ym.com </a>
                   </div>
+                  <p id="impressum"> <a href="impressum/index.html"> Impressum </a> </p>
 
                   <div class="footer-container">
                       <p> Copyright @ Theresa Mannschatz 2019 </p>
