create pubs and timeline pages

--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -28,7 +28,7 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
         <!-- Page title -->
-        <title>Yvonne Miller | Mehr über mich </title>
+        <title>Yvonne Miller | Werdegang </title>
         <!-- CSS styles -->
         <link rel="stylesheet" href="../css/main.css"/>
         <link rel="stylesheet" href="../css/normalize.css"/>
@@ -66,42 +66,29 @@
     </header>
 
  <main>
-    <section class="about-me-website">
-      <h1> Mehr über mich </h1>
-      <div class="div-shape">
-          <a href="../curriculum/index.html" >
-              <div class="abme-item-wrapper">
-                <figure>
-                    <img src="../img/road-solid-CV-link.png" alt="link-to-CV">
-                </figure>
-                <p> Beruflicher und akademischer Werdegang </p>
-              </div>
-          </a>
+    <section class="timeline-site">
+      <div class="timeline-wrapper">
+          <h1> Werdegang </h1>
       </div>
-      <div class="div-shape">
-          <a href="../publications/index.html" >
-              <div class="abme-item-wrapper">
-                <figure>
-                    <img src="../img/pubs-solid-link.png" alt="link-to-publicationsCV">
-                </figure>
-                <p> Publikationen und Projekte </p>
-              </div>
-          </a>
+      <div class="languages-wrapper">
+          <h1> Sprachen </h1>
+          <div class="lang-content-wrapper">
+            <div> DE </div>
+            <div class="lang-scale">
+                <p> C2 - Muttersprache </p>
+                <div>
+                  <div class="lang-scale-full"> </div>
+                  <div class="lang-scale-full"> </div>
+                  <div class="lang-scale-full"> </div>
+                  <div class="lang-scale-full"> </div>
+                  <div class="lang-scale-full"> </div>
+                  <div class="lang-scale-full"> </div>
+                </div>
+            </div>
+          </div>
       </div>
-      <div class="div-shape">
-          <a href="../projects/index.html" >
-              <div class="abme-item-wrapper">
-                <figure>
-                    <img src="../img/workshops-solid-link.png" alt="link-to-workshops">
-                </figure>
-                <p> Kurse und Workshops </p>
-              </div>
-          </a>
-      </div>
-      <div> </div>
-      <div> </div>
-    </section>
 
+    </section>
 
 
     <!--- FOOTER -->
