--- a/publications/index.html
+++ b/publications/index.html
@@ -28,7 +28,7 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
         <!-- Page title -->
-        <title>Yvonne Miller | Mehr über mich </title>
+        <title>Yvonne Miller | Werdegang </title>
         <!-- CSS styles -->
         <link rel="stylesheet" href="../css/main.css"/>
         <link rel="stylesheet" href="../css/normalize.css"/>
@@ -66,40 +66,8 @@
     </header>
 
  <main>
-    <section class="about-me-website">
-      <h1> Mehr über mich </h1>
-      <div class="div-shape">
-          <a href="../curriculum/index.html" >
-              <div class="abme-item-wrapper">
-                <figure>
-                    <img src="../img/road-solid-CV-link.png" alt="link-to-CV">
-                </figure>
-                <p> Beruflicher und akademischer Werdegang </p>
-              </div>
-          </a>
-      </div>
-      <div class="div-shape">
-          <a href="../publications/index.html" >
-              <div class="abme-item-wrapper">
-                <figure>
-                    <img src="../img/pubs-solid-link.png" alt="link-to-publicationsCV">
-                </figure>
-                <p> Publikationen und Projekte </p>
-              </div>
-          </a>
-      </div>
-      <div class="div-shape">
-          <a href="../projects/index.html" >
-              <div class="abme-item-wrapper">
-                <figure>
-                    <img src="../img/workshops-solid-link.png" alt="link-to-workshops">
-                </figure>
-                <p> Kurse und Workshops </p>
-              </div>
-          </a>
-      </div>
-      <div> </div>
-      <div> </div>
+    <section class="timeline-site">
+
     </section>
 
 
