languages added and styled on CV page

--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -73,20 +73,58 @@
       <div class="languages-wrapper">
           <h1> Sprachen </h1>
           <div class="lang-content-wrapper">
-            <div> DE </div>
-            <div class="lang-scale">
-                <p> C2 - Muttersprache </p>
-                <div>
-                  <div class="lang-scale-full"> </div>
-                  <div class="lang-scale-full"> </div>
-                  <div class="lang-scale-full"> </div>
-                  <div class="lang-scale-full"> </div>
-                  <div class="lang-scale-full"> </div>
-                  <div class="lang-scale-full"> </div>
-                </div>
-            </div>
-          </div>
-      </div>
+
+                <div class="lang-items">
+                    <div class="lang-scale-icon"> DE
+                    </div>
+                    <div class="lang-scale">
+                        <p id="lang-scale-text"> C2 - Muttersprache </p>
+                        <div class="lang-scale-items">
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-full"> </div>
+                        </div>
+                    </div> <!-- END lang-scale -->
+                </div> <!-- END lang-items -->
+
+                <div class="lang-items">
+                    <div class="lang-scale-icon"> ES
+                    </div>
+                    <div class="lang-scale">
+                        <p> C1 - verhandlungssicher in Wort und Schrift </p>
+                        <div class="lang-scale-items">
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-empty"> </div>
+                        </div>
+                    </div> <!-- END lang-scale -->
+                </div> <!-- END lang-items -->
+
+                <div class="lang-items">
+                    <div class="lang-scale-icon"> POR
+                    </div>
+                    <div class="lang-scale">
+                        <p> C1 - verhandlungssicher in Wort und Schrift </p>
+                        <div class="lang-scale-items">
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-full"> </div>
+                          <div class="lang-scale-empty"> </div>
+                        </div>
+                    </div> <!-- END lang-scale -->
+                </div> <!-- END lang-items -->
+
+          </div> <!-- END lang-content-wrapper -->
+
+      </div> <!-- END languages-wrapper -->
 
     </section>
 
