basic styling of timeline finished

--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -67,9 +67,120 @@
 
  <main>
     <section class="timeline-site">
-      <div class="timeline-wrapper">
-          <h1> Werdegang </h1>
-      </div>
+      <div class="timeline">
+          <div class="container right"> <!-- timeline content container, right side -->
+              <div class="content" id="intro">
+                  <h1> Werdegang </h1>
+              </div>
+          </div>
+          <div class="container right">
+              <div class="content time-bubble">
+                  <time> 2019 </time>
+              </div>
+          </div>
+
+          <div class="container left"> <!-- timeline container, right side -->
+              <div class="content">
+                  <h2> Autorin, Redakteurin, DaF-Lehrerin </h2>
+                  <p class="location"> selbstständig (Brasilien) </p>
+                  <time> 04/2017 - heute </time>
+              </div>
+          </div>
+
+          <div class="container left">
+              <div class="content time-bubble">
+                  <time> 2017 </time>
+              </div>
+          </div>
+
+          <div class="container right">
+              <div class="content">
+                  <h2> Redakteurin </h2>
+                  <p> redaktionelle Erarbeitung von Lehrwerken für den Spanischunterricht </p>
+                  <p class="location"> Cornelsen, Berlin </p>
+                  <time> 09/2015 - 03/2017 </time>
+              </div>
+          </div>
+
+          <div class="container left">
+              <div class="content">
+                  <h2> Sprachassistentin (DAAD) </h2>
+                  <p> Dozentin für DaF und Fremdsprachendidaktik </p>
+                  <p class="location"> UFPA, Brasilien </p>
+                  <time> 08/2014 - 06/2015 </time>
+              </div>
+          </div>
+
+          <div class="container right">
+              <div class="content time-bubble">
+                  <time> 2014 </time>
+              </div>
+          </div>
+
+          <div class="container right">
+              <div class="content">
+                  <h2> Volontariat </h2>
+                  <p> Ausbildung zur Schulbuchredakteurin </p>
+                  <p class="location"> Cornelsen, Berlin </p>
+                  <time> 09/2011 - 03/2013 </time>
+              </div>
+          </div>
+
+          <div class="container left">
+              <div class="content">
+                  <h2> DaF-Praktikum </h2>
+                  <p> Bereich Sprachkurse und Prüfungen </p>
+                  <p> Goethe-Institut, Lissabon </p>
+                  <time> 04/2011 - 07/2011 </time>
+              </div>
+          </div>
+
+          <div class="container right">
+              <div class="content time-bubble">
+                  <time> 2011 </time>
+              </div>
+          </div>
+          <div class="container right">
+              <div class="content">
+                  <h2> Master </h2>
+                  <p> Fremdprachenlinguistik, Spanisch & DaF </p>
+                  <p class="location"> Universität Potsdam </p>
+                  <time> 10/2009 - 07/2014 </time>
+              </div>
+          </div>
+          <div class="container right">
+              <div class="content time-bubble">
+                  <time> 2009 </time>
+              </div>
+          </div>
+
+          <div class="container left">
+              <div class="content">
+                  <h2> Bachelor </h2>
+                  <p> Spanische & Deutsche Philologie, Lateinamerikanistik (Freie Universität) </p>
+                  <p class="location"> Berlin & Universidad Autónoma de Madrid </p>
+                  <time> 10/2005 - 09/2009 </time>
+              </div>
+          </div>
+
+          <div class="container right">
+              <div class="content time-bubble">
+                  <time> 2005 </time>
+              </div>
+          </div>
+
+          <div class="container right">
+              <div class="content">
+                  <a href=""> <h2> und weitere ... </h2> </a>
+              </div>
+          </div>
+
+      </div> <!-- END TIMELINE container -->
+
+
+
+
+
       <div class="languages-wrapper">
           <h1> Sprachen </h1>
           <div class="lang-content-wrapper">
