--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -68,7 +68,7 @@
  <main>
     <section class="timeline-site">
       <div class="timeline">
-          <div class="container right"> <!-- timeline content container, right side -->
+          <div class="container-intro right intro-dash"> <!-- timeline content container, right side -->
               <div class="content" id="intro">
                   <h1> Werdegang </h1>
               </div>
@@ -87,8 +87,8 @@
               </div>
           </div>
 
-          <div class="container left">
-              <div class="content time-bubble">
+          <div class="bubble-container left-bubble">
+              <div class="time-bubble">
                   <time> 2017 </time>
               </div>
           </div>
@@ -126,6 +126,12 @@
               </div>
           </div>
 
+          <div class="bubble-container left-bubble">
+              <div class="time-bubble">
+                  <time> 2011 </time>
+              </div>
+          </div>
+
           <div class="container left">
               <div class="content">
                   <h2> DaF-Praktikum </h2>
@@ -140,6 +146,7 @@
                   <time> 2011 </time>
               </div>
           </div>
+
           <div class="container right">
               <div class="content">
                   <h2> Master </h2>
@@ -148,8 +155,9 @@
                   <time> 10/2009 - 07/2014 </time>
               </div>
           </div>
-          <div class="container right">
-              <div class="content time-bubble">
+
+          <div class="bubble-container left-bubble">
+              <div class="time-bubble">
                   <time> 2009 </time>
               </div>
           </div>
