fixing desktop styles- finished

--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -68,7 +68,7 @@
  <main>
     <section class="timeline-site">
       <div class="timeline">
-          <div class="container-intro right intro-dash"> <!-- timeline content container, right side -->
+          <div class="container-intro intro-dash-right"> <!-- timeline content container, right side -->
               <div class="content" id="intro">
                   <h1> Werdegang </h1>
               </div>
