add gitignore file

--- a/publications/index.html
+++ b/publications/index.html
@@ -28,12 +28,15 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
         <!-- Page title -->
-        <title>Yvonne Miller | Werdegang </title>
+        <title>Yvonne Miller | Publikationen und Projekte </title>
         <!-- CSS styles -->
         <link rel="stylesheet" href="../css/main.css"/>
         <link rel="stylesheet" href="../css/normalize.css"/>
         <!-- Google fonts -->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Open+Sans:400,600,700,800|Roboto+Slab:400,700|Source+Sans+Pro:300,400,700,900|Source+Serif+Pro:400,600,700|Titillium+Web:300,400,600,700,900" rel="stylesheet">
+        <!-- Awesome fonts -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
     </head>
 
 <body>
@@ -66,7 +69,88 @@
     </header>
 
  <main>
-    <section class="timeline-site">
+    <section class="projects-pubs-site">
+        <h1> Publikationen und Projekte </h1>
+        <div class="content-wrapper">
+              <div class="highlight-pubs">
+                  <div class="highlight-pubs-item">
+                      <h2> Pub Titel 1 Vestibulum rutrum quam vitae fringilla tincidunt </h2>
+                      <div class="content">
+                          <p> Author(s): Yvonne Miller, Max Mustermann </p>
+                          <p> Editor(s):  </p>
+                          <time> Year: 2018  </time>
+                      </div>
+                      <i class="fas fa-long-arrow-alt-right"> </i>
+                  </div> <!-- END highlight-pubs-item -->
+                  <div class="highlight-pubs-item">
+                      <h2> Pub Titel 1 Vestibulum rutrum quam vitae fringilla tincidunt </h2>
+                      <div class="content">
+                          <p> Author(s): Yvonne Miller, Max Mustermann </p>
+                          <p> Editor(s):  </p>
+                          <time> Year: 2018  </time>
+                      </div>
+                      <i class="fas fa-long-arrow-alt-right"></i>
+                  </div> <!-- END highlight-pubs-item -->
+                  <div class="highlight-pubs-item">
+                      <h2> Pub Titel 1 Vestibulum rutrum quam vitae fringilla tincidunt </h2>
+                      <div class="content">
+                          <p> Author(s): Yvonne Miller, Max Mustermann </p>
+                          <p> Editor(s):  </p>
+                          <time> Year: 2018  </time>
+                      </div>
+                      <i class="fas fa-long-arrow-alt-right"></i>
+                  </div> <!-- END highlight-pubs-item -->
+              </div> <!-- END highlight-pubs -->
+              <div class="pubs-projects-normal">
+                  <div class="normal-pubs-item">
+                      <h2> Pub Titel 1 Vestibulum rutrum quam vitae fringilla tincidunt </h2>
+                      <div class="content">
+                          <p> Author(s): Yvonne Miller, Max Mustermann </p>
+                          <p> Editor(s):  </p>
+                          <time> Year: 2018  </time>
+                      </div>
+                      <i class="fas fa-long-arrow-alt-right"> </i>
+                  </div> <!-- END nromal-pubs-item -->
+                  <div class="normal-pubs-item">
+                      <h2> Pub Titel 1 Vestibulum rutrum quam vitae fringilla tincidunt </h2>
+                      <div class="content">
+                          <p> Author(s): Yvonne Miller, Max Mustermann </p>
+                          <p> Editor(s):  </p>
+                          <time> Year: 2018  </time>
+                      </div>
+                      <i class="fas fa-long-arrow-alt-right"> </i>
+                  </div> <!-- END nromal-pubs-item -->
+                  <div class="normal-pubs-item">
+                      <h2> Pub Titel 1 Vestibulum rutrum quam vitae fringilla tincidunt </h2>
+                      <div class="content">
+                          <p> Author(s): Yvonne Miller, Max Mustermann </p>
+                          <p> Editor(s):  </p>
+                          <time> Year: 2018  </time>
+                      </div>
+                      <i class="fas fa-long-arrow-alt-right"> </i>
+                  </div> <!-- END nromal-pubs-item -->
+                  <div class="normal-pubs-item">
+                      <h2> Pub Titel 1 Vestibulum rutrum quam vitae fringilla tincidunt </h2>
+                      <div class="content">
+                          <p> Author(s): Yvonne Miller, Max Mustermann </p>
+                          <p> Editor(s):  </p>
+                          <time> Year: 2018  </time>
+                      </div>
+                      <i class="fas fa-long-arrow-alt-right"> </i>
+                  </div> <!-- END nromal-pubs-item -->
+                  <div class="normal-pubs-item">
+                      <h2> Pub Titel 1 Vestibulum rutrum quam vitae fringilla tincidunt </h2>
+                      <div class="content">
+                          <p> Author(s): Yvonne Miller, Max Mustermann </p>
+                          <p> Editor(s):  </p>
+                          <time> Year: 2018  </time>
+                      </div>
+                      <i class="fas fa-long-arrow-alt-right"> </i>
+                  </div> <!-- END nromal-pubs-item -->
+              </div>
+              <div class="highlight-projects">
+              </div>
+        </div> <!-- END content wrapper -->
 
     </section>
 
